// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section snapshots should render Section 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp Section Section--light"
    data-test-section=""
  >
    <div
      class="css-kp4ill"
      data-test-box=""
    >
      <small
        class="css-1jnxvbp Section__label Section__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        label
      </small>
      <div
        class="css-1f1atqu"
        data-test-box=""
      />
    </div>
    children
  </div>
</DocumentFragment>
`;

exports[`Section snapshots should render with buttons 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp Section Section--light"
    data-test-section=""
  >
    <div
      class="css-kp4ill"
      data-test-box=""
    >
      <small
        class="css-1jnxvbp Section__label Section__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        label
      </small>
      <div
        class="css-1f1atqu"
        data-test-box=""
      >
        <div
          class="css-1jnxvbp ButtonIcon ButtonIcon--light"
          data-test-button-icon=""
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
            data-test-icon="close"
            height="14"
            name="Close"
            width="14"
          />
        </div>
      </div>
    </div>
    children
  </div>
</DocumentFragment>
`;
